# simulador-automatos-plp

./: README.md
haskell/: LICENSE  simulador-automatos-hs.cabal
haskell/app/: Main.hs
haskell/examples/: AFD.json  AFN.json
haskell/src/Automato/: AFD.hs  AFN.hs  DescricaoFormal.hs  Interface.hs  Reader.hs  Types.hs
