cabal-version:      3.0
name:               simulador-automatos-pk
version:            0.1.0.0
description:        Simulador de autômatos finitos determinísticos e não-determinísticos.
license:            MIT
license-file:       LICENSE
author:             Grupo 7

-- An email address to which users can send suggestions, bug reports, and patches.
maintainer:         62392378+michel-sudo@users.noreply.github.com
build-type:         Simple

-- Extra doc files to be distributed with the package, such as a CHANGELOG or a README.
extra-doc-files:    CHANGELOG.md,
                    README.md

common warnings
    ghc-options: -Wall -02

executable simulador-automatos-hs
    import:           warnings
    main-is:          Main.hs

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.0,
        text,
        containers,
        mtl,
        parsec,
        megaparsec

    -- Directories containing source files.
    hs-source-dirs:   app, src
    other-modules:
        Automato.AFD
        Automato.AFN
        Automato.Types
        Automato.Interface
        Automato.Reader

    -- Base language which the package is written in.
    default-language: Haskell2010
